--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Compiled class file
 *.class
 
+.idea/
+
+
 
 # Log file
 *.log
@@ -22,9 +25,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-<<<<<<< HEAD
-/.metadata/
-=======
 
-/.idea
->>>>>>> d4b2e7c9a2d8c36375f96d3b4a886e5f5fb839f1
