--- a/team2/src/main/webapp/WEB-INF/web.xml
+++ b/team2/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 
   <servlet>
     <servlet-name>Main</servlet-name>
@@ -10,6 +10,25 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>Main</servlet-name>
-    <url-pattern>/</url-pattern>
+    <url-pattern>/main</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>GetTaskServlet</servlet-name>
+    <servlet-class>servlets.GetTaskServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GetTaskServlet</servlet-name>
+    <url-pattern>/gettask</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>Task1</servlet-name>
+    <servlet-class>servlets.Task1Servlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Task1</servlet-name>
+    <url-pattern>/task1</url-pattern>
+  </servlet-mapping>
+
 </web-app>
