--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
 # Compiled class file
 *.class
 
+# Idea
 .idea/
-/out/
-/target/
-/.idea/
-/.settings/
-.metadata/
+out/
+*.iml
+*.iws
 
+# Eclipse
+.classpath
+.project
+.settings/
+bin/
 
-
+#Maven
+target/
 
 # Log file
 *.log
