--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
