--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/uaTransport
-spring.datasource.username=postgres
-spring.datasource.password=1
+spring.datasource.url=jdbc:postgresql://localhost:5432/softserve
+spring.datasource.username=user
+spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
