--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "angular-in-memory-web-api": "^0.6.0",
+    "angular4-carousel": "^3.1.8",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng-simple-slideshow": "^1.2.2",
+    "ngx-bootstrap": "^3.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
