--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "angular-in-memory-web-api": "^0.6.0",
+    "angular-simple-slideshow": "0.0.3",
     "angular4-carousel": "^3.1.8",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
