--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <name>demo</name>
-    <description>Demo project for Spring Boot</description>
+    <description>uaTransport service</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
