--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "transit-ui",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,24 +12,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.3",
-    "@angular/cdk": "^6.2.0",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
-    "@angular/material": "^6.2.0",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "angular-in-memory-web-api": "^0.6.0",
-    "angular-simple-slideshow": "0.0.3",
-    "angular4-carousel": "^3.1.8",
-    "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
-    "hammerjs": "^2.0.8",
-    "ng-simple-slideshow": "^1.2.2",
-    "ngx-bootstrap": "^3.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
