--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ logging.level.root=WARN
 logging.level.org.springframework.web=ERROR
 logging.level.org.hibernate=DEBUG
 logging.level.org.apache.commons.dbcp2=DEBUG
-logging.level.org.uaTransport=DEBUG
+logging.level.org.uatransport=DEBUG
 # ===============================
 logging.file=logfile.log
 #logging.path=d:/logs
