--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular-simple-slideshow": "0.0.3",
     "angular4-carousel": "^3.1.8",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ng-simple-slideshow": "^1.2.2",
