--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,18 +21,18 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 # ===============================
 spring.jackson.serialization.write_dates_as_timestamps=false
-# ===============================
-#Logging
-# ===============================
-logging.level.root=WARN
-#logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=ERROR
-logging.level.org.hibernate=DEBUG
-logging.level.org.apache.commons.dbcp2=DEBUG
-logging.level.org.uatransport=DEBUG
-# ===============================
-logging.file=logfile.log
-#logging.path=d:/logs
-# ===============================
-logging.pattern.console=%d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
-logging.pattern.file=%d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
+## ===============================
+##Logging
+## ===============================
+#logging.level.root=WARN
+##logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.web=ERROR
+#logging.level.org.hibernate=DEBUG
+#logging.level.org.apache.commons.dbcp2=DEBUG
+#logging.level.org.uatransport=DEBUG
+## ===============================
+#logging.file=logfile.log
+##logging.path=d:/logs
+## ===============================
+#logging.pattern.console=%d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
+#logging.pattern.file=%d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
