--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk: oraclejdk8
 
 script:
-- ./mvnw clean install
+mvn clean install
 
 before_install:
 - jdk_switcher use oraclejdk8
