--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: java
 jdk: oraclejdk8
 
+services:
+  postgresql
+
+before_install:
+  psql -c 'CREATE DATABASE uaTransport;' -U postgres
+
 install:
   mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
