--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   postgresql
 
 before_install:
-  psql -c 'CREATE DATABASE uaTransport;' -U postgres
+  - psql -c 'create database uaTransport;' -U postgres
 
 install:
   mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
