--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ services:
   postgresql
 
 before_install:
-- psql -c 'create database uaTransport;' -U postgres
-- psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
+  - psql -c 'create database uaTransport;' -U postgres
+  - psql -c 'ALTER USER postgres WITH PASSWORD '1';' -U postgres
+#  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
 
 install:
   mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
