--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 
 before_install:
   - psql -c 'create database uaTransport;' -U postgres
-  - psql -c 'ALTER USER postgres WITH PASSWORD '1';' -U postgres
+  - psql -c "ALTER USER postgres WITH PASSWORD '1';" -U postgres
 #  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
 
 install:
