--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@ngx-translate/http-loader": "^3.0.1",
     "angular-in-memory-web-api": "^0.6.0",
     "angular-simple-slideshow": "0.0.3",
+    "angular2-jwt": "^0.2.3",
     "angular4-carousel": "^3.1.8",
+    "auth0-js": "^9.6.1",
     "bootstrap": "^3.3.7",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
