--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   postgresql
 
 before_install:
-  - psql -c 'create database uaTransport;' -U postgres
+  - psql -c "CREATE DATABASE uaTransport;" -U postgres
   - psql -c "ALTER USER postgres WITH PASSWORD '1';" -U postgres
 #  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
 
