--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: java
 jdk: oraclejdk8
+sudo: required
 
 services:
   postgresql
 
-before_install:
-  - psql -c "CREATE DATABASE uaTransport;" -U postgres
+before_script:
+  - psql -c "CREATE DATABASE uatransport;" -U postgres
   - psql -c "ALTER USER postgres WITH PASSWORD '1';" -U postgres
 #  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
 
