--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,14 @@ language: java
 jdk: oraclejdk8
 sudo: required
 
+before_script:
+  - "psql -U postgres -c 'CREATE DATABASE uatransport;'"
+  - "psql -U postgres -c "ALTER USER postgres WITH PASSWORD '1';""
+  - "rake db:migrate"
+#  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
+
 services:
   postgresql
-
-postgres:
-  adapter: postgresql
-  database: uaTransport
-  username: postgres
-  password: 1
-
-before_script:
-  - psql -U postgres -c 'CREATE DATABASE uatransport;'
-  - psql -U postgres -c "ALTER USER postgres WITH PASSWORD '1';"
-#  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
 
 install:
   mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
