--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ jdk: oraclejdk8
 sudo: required
 
 before_script:
-  - "psql -U postgres -c 'CREATE DATABASE uatransport;'"
-  - "psql -U postgres -c "ALTER USER postgres WITH PASSWORD '1';""
+  - psql -U postgres -c 'CREATE DATABASE "uatransport";'
+  - psql -U postgres -c "ALTER USER postgres WITH PASSWORD '1';"
   - "rake db:migrate"
 #  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
 
