Update travis.yml db settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: java
 jdk: oraclejdk8
-sudo: required
 
 before_script:
-  - psql -U postgres -c 'CREATE DATABASE "uatransport";'
-  - psql -U postgres -c "ALTER USER postgres WITH PASSWORD '1';"
+  - psql -c "create database uaTransport;" -U postgres
+  - psql -c "SELECT * FROM pg_catalog.pg_tables;" -U postgres
+  - psql -c "ALTER USER postgres WITH PASSWORD '1';" -U postgres
 #  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
 
 services:
