--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 jdk: oraclejdk8
 
 before_script:
-  - psql -c "create database uaTransport;" -U postgres
+#  - psql -c "create database uaTransport;" -U postgres
+  - psql -c "CREATE DATABASE uaTransport OWNER postgres;" -U postgres
   - psql -c "SELECT * FROM pg_catalog.pg_tables;" -U postgres
   - psql -c "ALTER USER postgres WITH PASSWORD '1';" -U postgres
 #  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
