--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk: oraclejdk8
 
 before_script:
-  - psql -c 'create database uaTransport;'
+  - sudo psql -c "create database uaTransport;"
   - psql -c "SELECT * FROM pg_catalog.pg_tables;" -U postgres
   - psql -c "ALTER USER postgres WITH PASSWORD '1';" -U postgres
 #  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
