--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,9 @@ jdk: oraclejdk8
 services:
   postgresql
 
-env:
-  DB=pgsql
-
 before_script:
   - sudo psql -c 'create database uaTransport;' -U postgres
-  - psql -c "SELECT * FROM pg_database;" -U postgres
+  - psql \l -U postgres
   - psql -c "ALTER USER postgres WITH PASSWORD '1';" -U postgres
 #  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
 
