--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ services:
 
 before_script:
   - sudo psql -c 'create database uaTransport;' -U postgres
-  - psql \l -U postgres
+  - psql \l -U postgres;
   - psql -c "ALTER USER postgres WITH PASSWORD '1';" -U postgres
 #  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
-
 
 addons:
   postgresql: "9.6"
