--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ services:
   postgresql
 
 before_script:
-  - psql -c 'create database uaTransport;' -U postgres
-  - psql -c "SELECT * FROM pg_database;" -U postgres
-  - psql -c "ALTER USER postgres WITH PASSWORD '1';" -U postgres
-#  - psql -c "CREATE USER postgres WITH PASSWORD '1';" -U postgres
+  - psql -c 'create database uatransport;' -U postgres
+#  - psql -c "ALTER USER postgres WITH PASSWORD '1';" -U postgres
 
 addons:
   postgresql: "9.6"
