--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-in-memory-web-api": "^0.6.0",
     "angular-simple-slideshow": "0.0.3",
     "angular4-carousel": "^3.1.8",
+    "auth0-js": "^9.6.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
