--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/uaTransport
 spring.datasource.username=postgres
 spring.datasource.password=1
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 # ===============================
 # = JPA / HIBERNATE
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
