Fix filter and remove all @CrossOrigin anotations

--- a/src/main/resources/cross-origin.properties
+++ b/src/main/resources/cross-origin.properties
@@ -1,1 +1,3 @@
-url=http://localhost:4200/
+Access-Control-Allow-Origin=http://localhost:4200
+Access-Control-Allow-Methods=GET,POST
+Access-Control-Allow-Headers=Content-Type, Access-Control-Allow-Headers, X-Requested-With
