--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,18 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.6</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
     </dependencies>
 
     <!--<build>-->
@@ -124,6 +136,9 @@
             <!--</plugin>-->
         <!--</plugins>-->
     <!--</build>-->
+
+
+
 
 
 </project>
