Add s3 and CodeDeploy settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,13 @@ deploy:
       branch: deploy
     bucket: travisdeploybucket
     region: eu-central-1
+    upload-dir: target/jar
   - provider: codedeploy
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: travisdeploybucket
     key: uaTransport-0.0.1.jar
-    bundle_type: .jar
+#    bundle_type: .zip
     application: ServerCodedeployApplication
     deployment_group: ServerDeploymentGroup
     region: eu-central-1
