--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ before_install:
   - jdk_switcher use oraclejdk8
 
 install:
-  mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 script:
-  - mvn clean install
-  - zip server.zip /home/travis/build/44stv/Lv-318.Java/target/uaTransport-0.0.1.jar
+#  - mvn clean install
+  - zip server.zip /home/travis/build/44stv/Lv-318.Java/target/jar/uaTransport-0.0.1.jar
 
 #before_deploy:
 
