--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
                     <outputDirectory>target/jar</outputDirectory>
