Change the way how zip is building

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ install:
 
 script:
   - mvn clean install
-  - zip -r home/travis/build/44stv/Lv-318.Java/target/jar/server.zip home/travis/build/44stv/Lv-318.Java/target/jar/
+#  - zip -r home/travis/build/44stv/Lv-318.Java/target/jar/server.zip home/travis/build/44stv/Lv-318.Java/target/jar
+  - cd home/travis/build/44stv/Lv-318.Java/target/jar
+  - zip -r server *
   - ls /home/travis/build/44stv/Lv-318.Java/target/jar/
 
 #before_deploy:
