--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,10 @@ install:
 script:
   - mvn clean install
 #  - zip -r home/travis/build/44stv/Lv-318.Java/target/jar/server.zip home/travis/build/44stv/Lv-318.Java/target/jar
-  - cd home/travis/build/44stv/Lv-318.Java/target/jar
-  - zip -r server *
-  - ls /home/travis/build/44stv/Lv-318.Java/target/jar/
+  - ls
+#  - cd home/travis/build/44stv/Lv-318.Java/target/jar
+#  - zip -r server *
+#  - ls /home/travis/build/44stv/Lv-318.Java/target/jar/
 
 #before_deploy:
 
