Debug zip building

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: travisdeploybucket
-    key: server.zip
+    key: uaTransport-1.0.jar
     bundle_type: zip
     application: ServerCodedeployApplication
     deployment_group: ServerDeploymentGroup
