Add appspec.yml and buildspec.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ install:
 
 script:
   - mvn clean install
-#  - zip -r server target/ *
+  - cd target
+  - zip -r server *
 #  - pwd
 #  - cd target/jar
 #  - zip -rm server *
@@ -40,7 +41,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: travisdeploybucket
-    key: uaTransport-1.0.jar
+    key: server.zip
     bundle_type: zip
     application: ServerCodedeployApplication
     deployment_group: ServerDeploymentGroup
