--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,9 @@ before_install:
   - jdk_switcher use oraclejdk8
 
 install:
-#  mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
   - psql -c 'create database uatransport;' -U postgres
-  - mvn package
-  - mvn test -B
+#  - mvn package
 
 before_deploy:
   - cd target
