--- a/src/main/resources/appspec.yml
+++ b/src/main/resources/appspec.yml
@@ -4,6 +4,16 @@ files:
   - source: uaTransport-1.0.jar
     destination: /home/ec2-user/server
     overwrite: yes
-#hooks:
-#  AfterInstall:
-#  - location: scripts/afterinstall
+hooks:
+  ApplicationStop:
+    - location: scripts/server_stop.sh
+      timeout: 20
+      runas: ec2-user
+  ApplicationStart:
+    - location: scripts/server_start.sh
+      timeout: 20
+      runas: ec2-user
+  ValidateService:
+    - location: scripts/server_validate.sh
+      timeout: 60
+      runas: ec2-user
