Add scripts to stop and start java app

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 script:
   - cd target/classes
   - mv appspec.yml ..
-  - mv scripts/* ../scripts
+  - mv scripts/* ../
   - cd ..
   - zip -r server *
   - mkdir -p upload
