Add scripts to stop and start java app

--- a/src/main/resources/appspec.yml
+++ b/src/main/resources/appspec.yml
@@ -5,10 +5,10 @@ files:
     destination: /home/ec2-user/server
     overwrite: yes
 hooks:
-  AfterInstall:
-    - location: scripts/server_stop.sh
-      timeout: 20
-      runas: ec2-user
+#  AfterInstall:
+#    - location: scripts/server_stop.sh
+#      timeout: 20
+#      runas: ec2-user
   ApplicationStart:
     - location: scripts/server_start.sh
       timeout: 20
