--- a/src/main/resources/cross-origin.properties
+++ b/src/main/resources/cross-origin.properties
@@ -1,3 +1,3 @@
 Access-Control-Allow-Origin=http://localhost:4200
-Access-Control-Allow-Methods=GET,POST
+Access-Control-Allow-Methods=GET,POST,DELETE,PUT
 Access-Control-Allow-Headers=Content-Type, Access-Control-Allow-Headers, X-Requested-With
