add methods to FeedbackCriteria and Question

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/uaTransport
+spring.datasource.url=jdbc:postgresql://localhost:5433/uaTransport
 spring.datasource.username=postgres
-spring.datasource.password=1
+spring.datasource.password=Marichechka21091993
 #spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 # ===============================
