--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,6 @@ logging.file=logfile.log
 # ===============================
 logging.pattern.console=%d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
 logging.pattern.file=%d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
+
+jwt.secretKey=youShallNotPass
+jwt.token.expire-length=3600000
