add expiredInterceptor, fix login logic

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ng-simple-slideshow": "^1.2.2",
     "ngx-bootstrap": "^3.0.0",
     "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
